--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^1.19.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react-spotify-player": "^1.0.4"
   }
 }
